# AutoDDS

./: .gitignore  CMakeLists.txt  README.md  configure.sh
libs/common/: assert.hpp  cstdint.hpp  static_assert.hpp
libs/config/: config.hpp  helper_macros.hpp  userconfig.hpp  workaround.hpp
libs/container/: container_fwd.hpp
libs/core/: addressof.hpp  no_exceptions_support.hpp
libs/interprocess/: creation_tags.hpp  errors.hpp  exceptions.hpp  file_mapping.hpp  interprocess_fwd.hpp  managed_mapped_file.hpp  mapped_region.hpp  offset_ptr.hpp  permissions.hpp  segment_manager.hpp  shared_memory_object.hpp
libs/intrusive/: bs_set_hook.hpp  bstree.hpp  bstree_algorithms.hpp  circular_slist_algorithms.hpp  intrusive_fwd.hpp  linear_slist_algorithms.hpp  link_mode.hpp  options.hpp  pack_options.hpp  parent_from_member.hpp  pointer_plus_bits.hpp  pointer_rebind.hpp  pointer_traits.hpp  rbtree.hpp  rbtree_algorithms.hpp  set.hpp  set_hook.hpp  slist.hpp  slist_hook.hpp
libs/move/: adl_move_swap.hpp  algorithm.hpp  core.hpp  iterator.hpp  move.hpp  traits.hpp  utility.hpp  utility_core.hpp
libs/type_traits/: add_lvalue_reference.hpp  add_reference.hpp  add_rvalue_reference.hpp  declval.hpp  integral_constant.hpp  intrinsics.hpp  is_abstract.hpp  is_arithmetic.hpp  is_array.hpp  is_complete.hpp  is_constructible.hpp  is_convertible.hpp  is_default_constructible.hpp  is_destructible.hpp  is_enum.hpp  is_floating_point.hpp  is_integral.hpp  is_lvalue_reference.hpp  is_reference.hpp  is_rvalue_reference.hpp  is_unsigned.hpp  (+3 more)
test/: testconpile.cpp  testnew.cpp
(+119 files in other folders)
